# rgml

./: .gitignore  CREDIT.md  Cargo.toml  LICENSE  LICENSE.txt  README.md  build.rs  cbindgen.toml
.github/workflows/: ci_linux.yml  ci_test.yml  ci_windows.yml  rust_test.yml
bindings/: rgml.h
bindings/dotnet/: Internal.cs  Matrix4.cs  Types.cs  Vector2.cs  Vector3.cs  Vector4.cs
bindings/tests/clib/: CMakeLists.txt  main.c
bindings/tests/dotnet/: PrismMathTest.csproj  Program.cs
scripts/: bundle_ci.sh  dummy_ci.sh  generate_swizzle.py
scripts/codegen/: generate_ffi.py  generate_swizzle.py
src/: common.rs  ffi.rs  lib.rs  matrix.rs  real.rs  vector.rs
src/tests/: matrix.rs  vector.rs
src/vector/: swizzle.rs  swizzle_gen.rs
