[package]
name = "prism_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "serialization", "swizzle" ]
serialization = [ "serde", "serde_arrays" ]
real_t_is_double = []
swizzle = []

[dependencies]
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }