[package]
name = "rgml"
version = "0.2.0"
edition = "2021"
description = "Graphical math library for rust, heavily borrowing inspiration from GLM"
authors = ["zCubed"]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "swizzle" ]
serialization = [ "serde", "serde_arrays" ]
real_t_is_double = []
swizzle = []

[dependencies]
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }
half = { version = "2.1.0", optional = true }

[build-dependencies]
cbindgen = "0.24.3"