[package]
name = "rgml"
description = "Graphical math library for rust, heavily borrowing inspiration from GLM"

version = "0.2.0"
edition = "2021"

license-file = "LICENSE"

authors = [
    "Liam R. (zCubed3) <zcubedtres@gmail.com"
]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "swizzle" ]
serialization = [ "serde", "serde_arrays" ]
real_t_is_double = []
swizzle = []

[dependencies]
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }
